# meeting-transcription-agent

./: .gitignore  README.md  render.yaml
backend/: .gitignore  README.md  main.py  pyproject.toml  sample_summary.txt  summary.txt
backend/app/: models.py
backend/app/api/: __init__.py  get_transcription_file_name.py  summarize.py  transcribe.py
backend/app/lib/: Env.py  JsonSchemas.py  Pydantic.py  Strings.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: ApiTypes.json  ApiTypes.ts  Numbers.shared.ts  Results.shared.ts  StatusCodes.shared.ts  Strings.shared.ts  Urls.shared.ts
frontend/src/routes/: +page.svelte
